# TensorC

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.txt
.github/workflows/: build.yml
examples/: basic_example.c
include/: TensorC.h  core.h  tensor.h  version.h
